--- a/templates/faculty_form.html
+++ b/templates/faculty_form.html
@@ -27,6 +27,11 @@
             </div>
 
             <div class="mb-3">
+                <label for="department" class="form-label">Department:</label>
+                <input type="text" class="form-control" id="department" name="department" required>
+            </div>
+
+            <div class="mb-3">
                 <label for="thesis_supervision" class="form-label">Thesis Supervision:</label>
                 <input type="text" class="form-control" id="thesis_supervision" name="thesis_supervision" required>
             </div>
