--- a/templates/cse4.html
+++ b/templates/cse4.html
@@ -7,7 +7,7 @@ welcome {{request.user}}
 <label for="openSidebar" class="sidebaricon">
     <div class="spinner top"></div>
     <div class="spinner middle"></div>
-    <div class="spinner bottom"></div>
+    <div class= "spinner bottom"></div>
 </label>
 <div id="sidebar">
     <ul class="menu">
@@ -49,93 +49,97 @@ welcome {{request.user}}
         <li> <a href="/postt">Thesis</a></li>
         <li> <a href="/faculty">Faculty Informations</a></li>
         <li><a href="/courseinfo">Course Info</a></li>
-        <li> <a href="#">Contract Us</a></li>
-        <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">calender</a></li>
-        
-
-
+        <li> <a href="#">Contact Us</a></li>
+        <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">Calendar</a></li>
     </ul>
-     
 </div>
 
+<div class="main">
+    <h2>400 level courses  <button style="position: fixed; top:100px; right: 50px;" onclick="window.location.href = '/comment';">Give FeedBack</button></h2> 
+    <hr>
+    
+    <div class="view">
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <tbody>
+                        {% for course_code, resources in grouped_resources.items() %}
 
-    <div class="main">
-        <h2>400 level courses  <button style="position: fixed; top:100px; right: 50px;" onclick="window.location.href = '/comment';">Give FeedBack</button></h2> 
-        <hr>
-        
-        <div class="view">
-            <div class="row">
-                <div class="col-12">
-                    <table class="table">
-                        <tbody>
-                            {% for course_code, resources in grouped_resources.items() %}
-                                <a><img src="/static/pic/cse4/{{ course_code }}.png" height="200px" alt="Image" class="image"></a>
-                                <div class="popup">
-                                    <div class="popup-content">
-                                        <span class="closeButton">&times;</span>
-                                        <h3>Course Code: {{ course_code }}</h3>
-                                        <ol>
-                                            {% for resource in resources %}
-                                                <li><a href="{{ url_for('serve_file', filename=resource.up_file) }}" target="_blank">Show File {{ resource.unique_name }}</a></li>
+                            <a><img src="/static/pic/cse4/{{ course_code }}.png" height="200px" alt="Image" class="image"></a>
+                            <div class="popup">
+                                <div class="popup-content">
+                                    <span class="closeButton">&times;</span>
+
+                                    <h3>Course Code: {{ course_code }}</h3>
+                                    <h1> Theory Files</h1>
+                                    <ol>
+                                        {% for resource in resources %}
+                                          {% if resource.f_type=='theory' %}
+                                          <li> {{resource.Description}}
+                                            <a href="{{ url_for('uploaded_file', filename=resource.up_file) }}" target="_blank">Show File {{ resource.unique_name }}</a> <a href="{{ url_for('download', filename=resource.up_file) }}" target="_blank">download File</a></li>
+                                            {% endif %}
                                             {% endfor %}
-                                        </ol>
-                                    </div>
+                                    </ol>
+                                    <h1> Lab Files </h1>
+                                    <ol>
+                                        {% for resource in resources %}
+                                          {% if resource.f_type=='lab' %}  
+                                          
+                                        <li> {{resource.Description}} <a href="{{ url_for('uploaded_file', filename=resource.up_file) }}" target="_blank"> Show File {{ resource.unique_name }}</a> <a href="{{ url_for('download', filename=resource.up_file) }}" target="_blank">download File</a></li>
+                                        
+                                        {% endif %}
+                                        {% endfor %}
+                                    </ol>
                                 </div>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+                            </div>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
-
-<style>
-    .popup {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-    }
-    
-    .popup-content {
-        background-color:rgb(233, 245, 250);
-        background-image: url(/static/pic/brac_logo.gif);
-        background-repeat:no-repeat;
-        background-position: center;
-        width: 500px;
-        padding: 20px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        height: 500px;
-        transform: translate(-50%, -50%);
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    }
-    
-    
-    .openButton {
-        margin-top: 20px;
-    }
-    
-    .closeButton {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        cursor: pointer;
-        
-    }
-    
-    
-     
-
-</style>
-
-<script src="/static/script.js"></script>
-   
-   
 </div>
+
+    <style>
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        .popup-content {
+            background-color: rgb(233, 245, 250);
+            background-image: url(/static/pic/brac_logo.gif);
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 500px;
+            padding: 20px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            height: 500px;
+            transform: translate(-50%, -50%);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        .openButton {
+            margin-top: 20px;
+        }
+
+        .closeButton {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
+    </style>
+
+    <script src="/static/js/script.js"></script>
+</div>
+
 </body>
 {% endblock body %}
