--- a/templates/faculty_description.html
+++ b/templates/faculty_description.html
@@ -53,9 +53,9 @@
     </ul>
 </div>
 
-<img src="static/pic/study" alt="">
-<div style=" display: flex; justify-content: center; align-items: center; background-color: rgb(233, 245, 250);background-repeat: no-repeat;  height: 100%; padding: 10px 50px;">
-    <img src="{{ url_for('static', filename='pic/brac_logo.gif') }}">
+
+
+ 
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
@@ -77,6 +77,10 @@
                             <tr>
                                 <th scope="row">Email:</th>
                                 <td>{{ faculty.email }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Department:</th>
+                                <td>{{ faculty.department }}</td>
                             </tr>
                             <tr>
                                 <th scope="row">Thesis Supervision Availability:</th>
@@ -102,7 +106,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <img src="{{ url_for('serve_file', filename=faculty.routine) }}" alt="Faculty Image" class="img-fluid">
+                                <img src="{{ url_for('uploaded_file', filename=faculty.routine) }}" alt="Faculty Image" class="img-fluid">
                             </div>
                             
                         </div>
